# PyAutoGalaxy

./: .gitignore  .readthedocs.yaml  AGENTS.md  CITATIONS.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  eden.ini  optional_requirements.txt  pydoc.sh  pyproject.toml  readthedocs.yaml  readthedocs.yml  release.sh  requirements.txt  requirements_build.txt  setup.py  test_dPIE_lenstool.ipynb  to_do_list  zenodo.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: draft-pdf.yml  main.yml  notify-workspaces.yml  url_check.yml
autoastro/: __init__.py  dimensions.py  exc.py  lensing.py
autoastro/galaxy/: fit_galaxy.py  galaxy.py  galaxy_data.py  galaxy_fit.py  galaxy_model.py  masked_galaxy_data.py
autoastro/hyper/: hyper_data.py
autoastro/plot/: __init__.py  fit_galaxy_plots.py  galaxy_plots.py  lensing_plotters.py  light_profile_plots.py  mass_profile_plots.py  profile_plots.py
autoastro/plots/: __init__.py  fit_galaxy_plots.py  galaxy_plots.py  lens_plotter_util.py  lensing_plotters.py  profile_plots.py
autoastro/plotters/: __init__.py  fit_galaxy_plotters.py  (+4 more)
autogalaxy/: __init__.py  abstract_fit.py  convert.py  dictable.py  dimensions.py  exc.py  fixtures.py  lensing.py  mock.py
automodel/: __init__.py  cosmology_util.py  dimensions.py  exc.py
docs/: conf.py  howtogalaxy.rst  index.md  index.rst  installation.rst  papers.rst  requirements.txt
files/: citations.bib  citations.md  citations.tex  release.sh
paper/: README.md  paper.bib  paper.json  paper.md
test_autoastro/: conftest.py  test_dimensions.py
test_autogalaxy/: conftest.py  mock.py  test_convert.py  test_lensing.py  test_regression.py  test_simulate_and_fit.py
test_automodel/: test_cosmology_util.py  test_dimensions.py
(+1798 files in other folders)
