[build-system]
requires = ["setuptools>=79.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogalaxy"
dynamic = ["version"]
description="Open-Source Multi Wavelength Galaxy Structure & Morphology"
readme = { file = "README.rst", content-type = "text/x-rst" }
license-files = [
    "LICENSE",
]
requires-python = ">=3.9"
authors = [
    { name = "James Nightingale", email = "James.Nightingale@newcastle.ac.uk" },
    { name = "Richard Hayes", email = "richard@rghsoftware.co.uk" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
keywords = ["cli"]
dependencies = [
    "autofit",
    "autoarray",
    "colossus==1.3.1",
    "astropy>=5.0,<=6.1.2",
    "nautilus-sampler==1.0.4"
]

[project.urls]
Homepage = "https://github.com/Jammy2211/PyAutoGalaxy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "test_autogalaxy", "test_autogalaxy*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"


[project.optional-dependencies]
optional=[
    "numba",
    "pylops>=1.10.0,<=2.3.1",
    "pynufft",
    "ultranest==3.6.2",
    "zeus-mcmc==2.5.4",
    "getdist==1.4"
]
test = ["pytest"]
dev = ["pytest", "black"]

[tool.setuptools.package-data]
"autogalaxy.config" = ["*"]

[tool.pytest.ini_options]
testpaths = ["test_autogalaxy"]